DTM-16: fix checkboxes on firefox

--- a/DTM-16-V7/DTM-16.css
+++ b/DTM-16-V7/DTM-16.css
@@ -74,7 +74,7 @@
   font-size: 12px;
   white-space: pre-wrap;
   color: var(--text-muted);
-  content: "DTM-16 Build " "1046" "\a" "Aug 23, 2025";
+  content: "DTM-16 Build " "1047" "\a" "Aug 27, 2025";
 }
 
 .theme-dark, .theme-light {
@@ -3806,6 +3806,7 @@ html:not(.visual-refresh) .slider_a562c8.hasMarks_a562c8 .markDash_a562c8 {
 .container__87bf1 .input__87bf1 {
   opacity: 1;
   width: 0;
+  appearance: none;
 }
 .container__87bf1 .input__87bf1:before, .container__87bf1 .input__87bf1:after {
   margin-top: -1px;
