--- a/DTM-16-V7/src/switches.scss
+++ b/DTM-16-V7/src/switches.scss
@@ -3,8 +3,6 @@
 @use "funcs" as *;
 // switches
 @at-root {
-  @supports not (-moz-appearance: none) {
-  }
   .container__87bf1 {
     border-radius: 0;
     border-color: #0000 !important;
@@ -18,6 +16,7 @@
     .input__87bf1 {
       opacity: 1;
       width: 0;
+      appearance: none;
       &:before, &:after {
         margin-top: -1px;
         margin-left: -1px;
